--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "dotenv": "^17.2.2",
+    "file-saver": "^2.0.5",
+    "idb-keyval": "^6.2.2",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.562.0",
     "next": "15.5.3",
     "openai": "^5.22.0",
     "react": "19.1.0",
