--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "idb-keyval": "^6.2.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
-    "next": "15.5.3",
+    "next": "^16.1.1",
     "openai": "^5.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
